# cordic-hls

./: README.md
Vitis/.rigel_lopper/: lop-cpu-oslist.dts.pp  system-top.dts.pp
Vitis/_ide/: .peers.ini  .vitisPlatformRepo.json  settings.json  version.ini  workspace_journal.py  workspace_journal_13492.py  workspace_journal_14592.py
Vitis/app_component/: compile_commands.json  linearsolver.h  main.cc
Vitis/app_component/_ide/: hwspec.checksum
Vitis/app_component/src/: CMakeLists.txt  UserConfig.cmake  app.yaml
Vitis/platform/: vitis-comp.json
Vitis/platform/hw/: design_1_wrapper.xsa
Vitis/platform/hw/sdt/: design_1_wrapper.bit  pcw.dtsi  pl.dtsi  system-top.dts
Vitis/platform/zynq_fsbl/: app.yaml  compile_commands.json
Vitis/platform/zynq_fsbl/zynq_fsbl_bsp/: bsp.yaml  lib_list.yaml  lop-config.dts.dtb  lop-config.dts.pp
Vitis_HLS/_ide/: version.ini  workspace_journal.py  workspace_journal_14592.py
Vitis_HLS/hls_component/: compile_commands.json  hls_config.cfg  vitis-comp.json
Vitis_HLS/hls_component/solve_top/: solve_top.hlscompile_summary  solve_top.hlsrun_cosim_summary  solve_top.hlsrun_csim_summary  solve_top.hlsrun_package_summary  vitis-comp.json
Vitis_HLS/hls_component/solve_top/hls/: config.cmdline  hls_data.json
Vitis_HLS/hls_component/solve_top/reports/: hls_cosim.rpt  (+1 more)
Vivado/project_1/: project_1.xpr
Vivado/project_1/project_1.ip_user_files/sim_scripts/design_1/questa/: CMakeLists.txt  compile.do  design_1.sh  elaborate.do
fpga_hls/: backsub.cpp  linearsolver.cpp  main.cc  matrixmult.cpp  qrd.cpp  tb_linersolver.cpp
(+1012 files in other folders)
